syntax = "proto3";
package pstake.liquidstake.v1beta1;

import "gogoproto/gogo.proto";
import "pstake/liquidstake/v1beta1/liquidstake.proto";

option go_package = "github.com/persistenceOne/pstake-native/v2/x/liquidstake/types";
option (gogoproto.equal_all) = true;

// GenesisState defines the liquidstake module's genesis state.
message GenesisState {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // params defines all the parameters for the liquidstake module
  Params params = 1 [ (gogoproto.nullable) = false ];

  repeated LiquidValidator liquid_validators = 2
      [ (gogoproto.nullable) = false ];
}
