syntax = "proto3";
package pstake.lspersistence.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/msg/v1/msg.proto";
import "pstake/lspersistence/v1beta1/liquidstaking.proto";

option go_package = "github.com/persistenceOne/pstake-native/v2/x/lspersistence/types";

// Msg defines the liquid staking Msg service.
service Msg {

  // LiquidStake defines a method for performing a delegation of coins
  // from a delegator to whitelisted validators.
  rpc LiquidStake(MsgLiquidStake) returns (MsgLiquidStakeResponse);

  // LiquidUnstake defines a method for performing an undelegation of liquid staking from a
  // delegate.
  rpc LiquidUnstake(MsgLiquidUnstake) returns (MsgLiquidUnstakeResponse);

  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgLiquidStake defines a SDK message for performing a liquid stake of coins
// from a delegator to whitelisted validators.
message MsgLiquidStake {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\"", (cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

// MsgLiquidStakeResponse defines the Msg/LiquidStake response type.
message MsgLiquidStakeResponse {}

// MsgLiquidUnstake defines a SDK message for performing an undelegation of liquid staking from a
// delegate.
message MsgLiquidUnstake {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\"", (cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

// MsgLiquidUnstakeResponse defines the Msg/LiquidUnstake response type.
message MsgLiquidUnstakeResponse {
  google.protobuf.Timestamp completion_time = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}


message MsgUpdateParams {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/auth parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}
